kubernetes/saletracker/saletracker-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: saletracker
spec:
  selector:
    matchLabels:
      app: saletracker
  replicas: 2
  template: # template for the pods
    metadata:
      name: saletracker
      labels:
        app: saletracker
    spec:
      containers:
      - name: saletracker
        image: semiscone/saletracker
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        volumeMounts:
          - name: saletracker-persistent-storage
            mountPath: /var/data
      volumes:
        - name: saletracker-persistent-storage
          hostPath:
            path: /var/data/
            type: DirectoryOrCreate
