kubernetes/saletracker/saletracker.yaml
apiVersion: v1
kind: Pod
metadata:
  name: saletracker
  labels:
    app: saletracker
    release: "0.1"
spec:
  containers:
  - name: saletracker
    image: semiscone/saltracker
