kubernetes/saletracker/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  selector:
    app: postgres
  ports:
  - name: postgresport
    port: 5432
    targetPort: 5432
  type: ClusterIP
