kubernetes/saletracker/saletracker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: saletracker-service

spec:
  # This defines which pods are going to be represented by this Service
  # The service becomes a network endpoint for either other services
  # or maybe external users to connect to (eg browser)
  selector:
    app: saletracker

  ports:
    - name: http
      port: 80
      nodePort: 30081

  type: NodePort
