kubernetes/saletracker/ingress-routing.yaml
# apiVersion: networking.k8s.io/v1beta1

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: public-routing-ingress
spec:
  rules:
  - host: zeroarm.com
    http:
      paths: 
      - path: /
        backend:
          serviceName: saletracker-service
          servicePort: 80
  - host: www.zeroarm.com
    http:
      paths:
      - path: /
        backend:
          serviceName: fleetman-webapp
          servicePort: 80
---
# apiVersion: networking.k8s.io/v1beta1

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: secure-routing-ingress
  annotations:
    # type of authentication
    nginx.ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    # message to display with an appropriate context why the authentication is required
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - semiscone'
spec:
  rules:
  - host: queue.zeroarm.com
    http:
      paths:
      - path: /
        backend:
          serviceName: fleetman-queue
          servicePort: 8161
